trunk/Archive2/49/2ffb609a23c79c/output
main.cpp:5:17: error: use of undeclared identifier 'puts'
    StreamX() { puts(__FUNCTION__); }
                ^
main.cpp:6:17: error: use of undeclared identifier 'puts'
   ~StreamX() { puts(__FUNCTION__); }
                ^
main.cpp:18:5: error: use of undeclared identifier 'printf'
    printf("%p\n", stream);
    ^
